--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/rhiokim/haroopad-locales/issues"
   },
-  "homepage": "https://github.com/rhiokim/haroopad-locales"
+  "homepage": "https://github.com/rhiokim/haroopad-locales",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-jsonlint": "^1.0.7",
+    "time-grunt": "^1.3.0"
+  }
 }
